--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -27,6 +27,14 @@ ru:
       destroyed: 'Вы удалили мероприятие :('
     users:
       updated: 'Вы обновили свой профиль'
+    comments:
+      destroyed: 'Комментарий удален'
+      created: 'Ваш комментарий добавлен'
+      error: 'Ошибка с комментарием'
+    subscriptions:
+      created: 'Вы подписаны на это событие'
+      destroyed: 'Участник отписан'
+      error: 'Подписка/отписка не сработала'
 
   # Перевод названия приложения и компании-разработчика
   app:
@@ -34,7 +42,7 @@ ru:
     company: 'Хороший программист'
 
   # Склонятор для ошибок
-  thing:
+  error:
     one: '%{count} ошибка'
     few: '%{count} ошибки'
     many: '%{count} ошибок'
@@ -45,3 +53,11 @@ ru:
     btn:
       change: 'Изменить'
       delete: 'Удалить'
+
+  comments:
+    comment:
+      destroy_confirm: 'Вы уверены, что хотите удалить этот комменатрий?'
+
+  subscriptions:
+    subscription:
+      destroy_confirm: 'Вы уверены, что хотите удалить эту подписку?'
