--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -35,6 +35,7 @@ ru:
       created: 'Вы подписаны на это событие'
       destroyed: 'Участник отписан'
       error: 'Подписка/отписка не сработала'
+      own: 'Вы не можете подписаться на свое событие'
 
   # Перевод названия приложения и компании-разработчика
   app:
