add users avatar & photos for events

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,12 +5,16 @@ ru:
     models:
       user: 'Пользователь'
       event: 'Событие'
+      subscription: 'Подписка'
+      comment: 'Комментарий'
+      photo: 'Фотография'
 
     # Перевод названий аттрибутов моделей
     attributes:
       user:
         email: 'Email'
         name: 'Имя'
+        avatar: 'Аватарка'
         password: 'Пароль'
         password_confirmation: 'Подтверждение пароля'
       event:
@@ -18,6 +22,8 @@ ru:
         address: 'Место проведения'
         datetime: 'Дата и время'
         description: 'Описание'
+      photo:
+              photo: 'Фотография'
 
   # Перевод сообщений, которые отправляет контроллер
   controllers:
@@ -36,6 +42,11 @@ ru:
       destroyed: 'Участник отписан'
       error: 'Подписка/отписка не сработала'
       own: 'Вы не можете подписаться на свое событие'
+    photos:
+          error: 'Что-то не так с фоткой'
+          created: 'Вы добавили фотографию к событию'
+          destroyed: 'Вы удалили фотку'
+
 
   # Перевод названия приложения и компании-разработчика
   app:
