--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -22,6 +22,7 @@ ru:
         address: 'Место проведения'
         datetime: 'Дата и время'
         description: 'Описание'
+        pincode: 'Пинкод доступа'
       photo:
               photo: 'Фотография'
 
@@ -31,6 +32,7 @@ ru:
       created: 'Вы создали новое мероприятие'
       updated: 'Вы обновили мероприятие'
       destroyed: 'Вы удалили мероприятие :('
+      wrong_pincode: 'Неверный пинкод!'
     users:
       updated: 'Вы обновили свой профиль'
     comments:
@@ -43,9 +45,9 @@ ru:
       error: 'Подписка/отписка не сработала'
       own: 'Вы не можете подписаться на свое событие'
     photos:
-          error: 'Что-то не так с фоткой'
-          created: 'Вы добавили фотографию к событию'
-          destroyed: 'Вы удалили фотку'
+      error: 'Что-то не так с фоткой'
+      created: 'Вы добавили фотографию к событию'
+      destroyed: 'Вы удалили фотку'
 
 
   # Перевод названия приложения и компании-разработчика
@@ -73,6 +75,10 @@ ru:
   subscriptions:
     subscription:
       destroy_confirm: 'Вы уверены, что хотите удалить эту подписку?'
+
+  photos:
+    photo:
+      destroy_confirm: 'Вы уверены, что хотите удалить это фото?'
 
   event_mailer:
     comment:
